<resources>
    <string name="app_name">Shekel clicker</string>
    <string name="summon">Summon</string>
    <string name="back_button">Back</string>
    <string name="save_button">Save</string>
    <string name="load_button">Load</string>
    <string name="shop_button">Shop</string>
    <string name="click_button">Click me!</string>
    <string name="multiplier1">Multiplier 1</string>
    <string name="multiplier2">Multiplier 2</string>
    <string name="multiplier3">Multiplier 3</string>
    <string name="multiplier4">Multiplier 4</string>
    <string name="EditSaveID">Save ID</string>
    <string name="EditPass">Password</string>
    <string name="save_text">Save your progress to the firebase database.\nEnter a unique id for your save and a password to go along with it!</string>
    <string name="load_text">Load your progress from the firebase database.\nEnter the id of your save and the corresponding password to download a save file!</string>

</resources>
